Case 35868: Fix the flex styles so the button does not wrap after form is submitted

--- a/web/themes/custom/hm-public-theme/static/sass/pages/_my-account.scss
+++ b/web/themes/custom/hm-public-theme/static/sass/pages/_my-account.scss
@@ -47,6 +47,10 @@
         min-width: 250px;
       }
 
+      #edit-actions {
+        flex: 1 100%;
+      }
+
       .webform-button--submit {
         margin-right: 0;
         width: 150px;
